Updated About me

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         <div class="content-container">
           <h1 class="content-heading" id="about-me">About Me</h1>
           <p class="content-p">
-            Hello! I'm Tony Liu, an aspiring Software Engineer and Computer Science student at Hunter College, graduating in June 2026. 
-            With a strong foundation in software development, machine learning, and AI, I’m passionate about creating impactful solutions through technology. 
-            I've worked on building innovative applications using Python, JavaScript, and cloud technologies, and 
-            I’m eager to grow and contribute in a role that combines innovative technology with meaningful problem-solving.
+            Hi! I'm Tony Liu, a Computer Science student at Hunter College graduating in June 2026. 
+            I have a strong foundation in software engineering, IT Systems, and Machine Learning/AI,
+            with experience building real-world applications using Python, React.js, Javascript, JavaScript, and cloud tools.
+            Whether it's writing backend logic or managing infrastructure, I’m driven by solving problems that have impact. 
+            I’m open to roles in both Software Engineering and IT, especially where I can work hands-on with systems, build tools, and learn from a collaborative team. 
+            My goal is to keep sharpening my skills while contributing to real, impactful projects.
           </p>
           <!-- <div class="bullet-points">
             <li class="content-p">Fun Fact: I once built and showcased a <a href="https://codefest-97b85.web.app/" target="_blank">website</a> that can help plan entire vacations, 
