--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- https://fontawesome.com/v4/icons/ -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   </head>
   <body>
     <div id="left-container">
       <div id="title-container">
         <div id="profile-pic-container">
           <img id="profile-pic" src="./profile-pic.png" alt="Tony Liu">
-          <h1 id="title-h1">Tony Liu</h1>
+          <div id="title-bar">
+            <h1 id="title-h1">Tony Liu</h1>
+            <h3 style="font-style:italic; margin-bottom:5px">Software Engineer</h3>
+            <p style="margin:10px; text-align: center;padding-bottom:15px">"Building systems that make life easier, safer, and more human."</p>
+          </div>
         </div>
         <div id="info-container">
           <p class="info-line"><i class="fa fa-briefcase"></i> Aspiring Software Engineer</p>
@@ -38,24 +50,63 @@
         <div class="content-container">
           <h1 class="content-heading" id="about-me">About Me</h1>
           <p class="content-p">
-            Hi! I'm Tony Liu, a Computer Science student at Hunter College graduating in June 2026. 
-            I have a strong foundation in software engineering, IT Systems, and Machine Learning/AI,
-            with experience building real-world applications using Python, React.js, Javascript, JavaScript, and cloud tools.
-            Whether it's writing backend logic or managing infrastructure, I’m driven by solving problems that have impact. 
-            I’m open to roles in both Software Engineering and IT, especially where I can work hands-on with systems, build tools, and learn from a collaborative team. 
-            My goal is to keep sharpening my skills while contributing to real, impactful projects.
+            Hi! I'm Tony Liu and I'm in the final stretch of my CS degree at Hunter College. I've earned honors (Daedalus Honors, 
+            Dean's List), a 3.8 GPA and an anticipated graduation in June 2026. I have over two years of experience developing 
+            software systems that solve real-world problems. I Built systems that cut manual work by up to 80%, supported teams 
+            of 50-1,000+ users, and developed products ranging from enterprise automation pipelines to AI-powered assistive technologies. 
+            My goal in software is to create solutions that makes someone's day easier, safer, or more human.
           </p>
-          <!-- <div class="bullet-points">
-            <li class="content-p">Fun Fact: I once built and showcased a <a href="https://codefest-97b85.web.app/" target="_blank">website</a> that can help plan entire vacations, 
-              including generating itineraries, suggesting activities, and even booking flights and hotels! 
-              This project not only sharpened my skills in AI and web development but also sparked my passion for 
-              creating practical and user-friendly software solutions.
-            </li>
-          </div> -->
         </div>
-
         <!-- ========================= -->
-
+        <div class="content-container">
+          <h1 class="content-heading" style="margin-bottom:12px">Technical Skills</h1>
+          <div class = "skills-container">
+            <h3 class="skill-titles">Programming Languages</h3>
+            <div class="badges-container">
+              <span class="skill-badge"><i class="devicon-python-plain"></i>Python</span>
+              <span class="skill-badge"><i class="devicon-cplusplus-plain"></i>C++</span>
+              <span class="skill-badge"><i class="devicon-java-plain"></i>Java</span>
+              <span class="skill-badge"><i class="devicon-javascript-plain"></i>JavaScript</span>
+              <span class="skill-badge"><i class="devicon-azuresqldatabase-plain"></i>SQL</span>
+              <span class="skill-badge"><i class="devicon-php-plain"></i>PHP</span>
+              <span class="skill-badge"><i class="devicon-html5-plain"></i>HTML/CSS</span>
+            </div>
+          </div>  
+          <div class = "skills-container">
+            <h3 class="skill-titles">Technologies</h3>
+            <div class="badges-container">
+              <span class="skill-badge"><i class="devicon-react-original"></i>React.js</span>
+              <span class="skill-badge"><i class="devicon-express-original"></i>Express.js</span>
+              <span class="skill-badge"><i class="devicon-nodejs-plain"></i>Node.js</span>
+              <span class="skill-badge"><i class="devicon-tensorflow-original"></i>TensorFlow</span>
+              <span class="skill-badge"><i class="devicon-pytorch-original"></i>PyTorch</span>
+              <span class="skill-badge"><i class="devicon-pandas-plain"></i>Pandas</span>
+              <span class="skill-badge"><i class="devicon-numpy-plain"></i>NumPy</span>
+              <span class="skill-badge"><i class="devicon-matplotlib-plain"></i>Matplotlib</span>
+              <span class="skill-badge"><i class="devicon-fastapi-plain"></i>REST APIs</span>
+            </div>
+          </div>
+          <div class = "skills-container">
+            <h3 class="skill-titles">Tools</h3>
+            <div class="badges-container">
+              <span class="skill-badge"><i class="devicon-git-plain"></i>Git</span>
+              <span class="skill-badge"><i class="devicon-bash-plain"></i>Bash</span>
+              <span class="skill-badge">
+                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Hugging Face</title><path d="M12.025 1.13c-5.77 0-10.449 4.647-10.449 10.378 0 1.112.178 2.181.503 3.185.064-.222.203-.444.416-.577a.96.96 0 0 1 .524-.15c.293 0 .584.124.84.284.278.173.48.408.71.694.226.282.458.611.684.951v-.014c.017-.324.106-.622.264-.874s.403-.487.762-.543c.3-.047.596.06.787.203s.31.313.4.467c.15.257.212.468.233.542.01.026.653 1.552 1.657 2.54.616.605 1.01 1.223 1.082 1.912.055.537-.096 1.059-.38 1.572.637.121 1.294.187 1.967.187.657 0 1.298-.063 1.921-.178-.287-.517-.44-1.041-.384-1.581.07-.69.465-1.307 1.081-1.913 1.004-.987 1.647-2.513 1.657-2.539.021-.074.083-.285.233-.542.09-.154.208-.323.4-.467a1.08 1.08 0 0 1 .787-.203c.359.056.604.29.762.543s.247.55.265.874v.015c.225-.34.457-.67.683-.952.23-.286.432-.52.71-.694.257-.16.547-.284.84-.285a.97.97 0 0 1 .524.151c.228.143.373.388.43.625l.006.04a10.3 10.3 0 0 0 .534-3.273c0-5.731-4.678-10.378-10.449-10.378M8.327 6.583a1.5 1.5 0 0 1 .713.174 1.487 1.487 0 0 1 .617 2.013c-.183.343-.762-.214-1.102-.094-.38.134-.532.914-.917.71a1.487 1.487 0 0 1 .69-2.803m7.486 0a1.487 1.487 0 0 1 .689 2.803c-.385.204-.536-.576-.916-.71-.34-.12-.92.437-1.103.094a1.487 1.487 0 0 1 .617-2.013 1.5 1.5 0 0 1 .713-.174m-10.68 1.55a.96.96 0 1 1 0 1.921.96.96 0 0 1 0-1.92m13.838 0a.96.96 0 1 1 0 1.92.96.96 0 0 1 0-1.92M8.489 11.458c.588.01 1.965 1.157 3.572 1.164 1.607-.007 2.984-1.155 3.572-1.164.196-.003.305.12.305.454 0 .886-.424 2.328-1.563 3.202-.22-.756-1.396-1.366-1.63-1.32q-.011.001-.02.006l-.044.026-.01.008-.03.024q-.018.017-.035.036l-.032.04a1 1 0 0 0-.058.09l-.014.025q-.049.088-.11.19a1 1 0 0 1-.083.116 1.2 1.2 0 0 1-.173.18q-.035.029-.075.058a1.3 1.3 0 0 1-.251-.243 1 1 0 0 1-.076-.107c-.124-.193-.177-.363-.337-.444-.034-.016-.104-.008-.2.022q-.094.03-.216.087-.06.028-.125.063l-.13.074q-.067.04-.136.086a3 3 0 0 0-.135.096 3 3 0 0 0-.26.219 2 2 0 0 0-.12.121 2 2 0 0 0-.106.128l-.002.002a2 2 0 0 0-.09.132l-.001.001a1.2 1.2 0 0 0-.105.212q-.013.036-.024.073c-1.139-.875-1.563-2.317-1.563-3.203 0-.334.109-.457.305-.454m.836 10.354c.824-1.19.766-2.082-.365-3.194-1.13-1.112-1.789-2.738-1.789-2.738s-.246-.945-.806-.858-.97 1.499.202 2.362c1.173.864-.233 1.45-.685.64-.45-.812-1.683-2.896-2.322-3.295s-1.089-.175-.938.647 2.822 2.813 2.562 3.244-1.176-.506-1.176-.506-2.866-2.567-3.49-1.898.473 1.23 2.037 2.16c1.564.932 1.686 1.178 1.464 1.53s-3.675-2.511-4-1.297c-.323 1.214 3.524 1.567 3.287 2.405-.238.839-2.71-1.587-3.216-.642-.506.946 3.49 2.056 3.522 2.064 1.29.33 4.568 1.028 5.713-.624m5.349 0c-.824-1.19-.766-2.082.365-3.194 1.13-1.112 1.789-2.738 1.789-2.738s.246-.945.806-.858.97 1.499-.202 2.362c-1.173.864.233 1.45.685.64.451-.812 1.683-2.896 2.322-3.295s1.089-.175.938.647-2.822 2.813-2.562 3.244 1.176-.506 1.176-.506 2.866-2.567 3.49-1.898-.473 1.23-2.037 2.16c-1.564.932-1.686 1.178-1.464 1.53s3.675-2.511 4-1.297c.323 1.214-3.524 1.567-3.287 2.405.238.839 2.71-1.587 3.216-.642.506.946-3.49 2.056-3.522 2.064-1.29.33-4.568 1.028-5.713-.624"/></svg>
+                Hugging Face
+              </span>
+              <span class="skill-badge"><i class="devicon-googlecloud-plain"></i>Google Cloud VM</span>
+              <span class="skill-badge"><i class="devicon-postgresql-plain"></i>PostgreSQL</span>
+              <span class="skill-badge"><i class="devicon-firebase-plain"></i>Firebase</span>
+              <span class="skill-badge"><i class="devicon-mongodb-plain"></i>MongoDB</span>
+              <span class="skill-badge">
+                <svg fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="50px" height="50px"><path d="M20.13,32.5c-2.79-1.69-4.53-4.77-4.53-8.04V8.9c0-1.63,0.39-3.19,1.11-4.57L7.54,9.88C4.74,11.57,3,14.65,3,17.92v14.15	c0,1.59,0.42,3.14,1.16,4.5c0.69,1.12,1.67,2.06,2.88,2.74c2.53,1.42,5.51,1.36,7.98-0.15l8.02-4.9L20.13,32.5z M42.84,27.14	l-8.44-5.05v2.29c0,3.25-1.72,6.33-4.49,8.02l-13.84,8.47c-1.52,0.93-3.19,1.42-4.87,1.46l8.93,5.41c1.5,0.91,3.19,1.36,4.87,1.36	s3.37-0.45,4.87-1.36l9.08-5.5l3.52-2.13c0.27-0.16,0.53-0.34,0.78-0.54c0.08-0.05,0.16-0.11,0.23-0.16	c0.65-0.53,1.23-1.13,1.71-1.79c0.02-0.03,0.04-0.06,0.06-0.09c0.77-1.19,1.2-2.59,1.19-4.06C46.43,30.85,45.09,28.48,42.84,27.14z M42.46,9.88l-9.57-5.79l-3.02-1.83C29.45,2,29.01,1.79,28.56,1.61c-0.49-0.21-1-0.37-1.51-0.47c-1.84-0.38-3.76-0.08-5.46,0.89	c-2.5,1.43-3.99,3.99-3.99,6.87v9.6l2.8-1.65c2.84-1.67,6.36-1.66,9.19,0.03l14.28,8.54c1.29,0.78,2.35,1.81,3.12,3.02L47,17.92	C47,14.65,45.26,11.57,42.46,9.88z"/></svg>
+                Microsoft 365
+              </span>
+            </div>
+          </div>
+        </div>
+        <!-- ========================= -->
         <div class="content-container">
           <h1 class="content-heading" id="projects">Projects</h1>
           <!-- -->
@@ -241,27 +292,6 @@
           </a>
         <!-- ========================= -->          
         </div>
-          <div class="content-container">
-            <h1 class="content-heading" id="skills">Technical Skills</h1>
-            <div class = "skills-container">
-              <div class="skill">Python</div>
-              <div class="skill">C++</div>
-              <div class="skill">Java</div>
-              <div class="skill">JavaScript</div>
-              <div class="skill">React.js</div>
-              <div class="skill">Microsoft 365</div>
-              <div class="skill">Microsoft Power Automate</div>
-              <div class="skill">SQL</div>
-              <div class="skill">Git</div>
-              <div class="skill">Bash</div>
-              <div class="skill">Data Science</div>
-              <div class="skill">Machine Learning</div>
-              <div class="skill">Full-Stack Software Engineering</div>
-              <div class="skill">Project Management</div>
-              <div class="skill">Web Development</div>
-              <div class="skill">Game Development</div>
-            </div>  
-          </div>
       </div>
     </div>
     <br/><br/>
